codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chained_config_error_wraps_in_history_snapshot.snap
---
source: tui/src/chatwidget/tests/config_errors_tests.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---

■ Failed to save default model: config/batchWrite failed
in TUI: Invalid configuration: features.fast_mode=true
is not supported; allowed set [fast_mode=false]
